# minimal_ros_nodes

./: .gitignore  LICENSE  README.md
cnn_classifier/: CMakeLists.txt  README.md  package.xml  setup.py
cnn_classifier/launch/: cnn_classifier.launch
cnn_classifier/src/cnn_classifier/: cnn_classifier.py
cnn_classifier/src/cnn_classifier/tensorflow_fcn/: fcn8_vgg_depth.py
model_tracker/: CMakeLists.txt  package.xml
model_tracker/include/: multi_model_tracker.h
model_tracker/include/impl/: multi_model_tracker.hpp
model_tracker/include/tracker/: adaptive_particle_filter_omp.h  combined_coherence.h  rejective_point_cloud_coherence.h
model_tracker/include/tracker/impl/: adaptive_particle_filter_omp.hpp  combined_coherence.hpp  rejective_point_cloud_coherence.hpp
model_tracker/launch/: multi_track.launch
model_tracker/msg/: ModelTracker.msg
model_tracker/src/: model_tracker_norecog.cpp
